String e cor salvas no values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MyBusiness</string>
+    <string name="login">Login</string>
+    <string name="senha">Senha</string>
+    <string name="lembrar">Lembrar-se</string>
+    <string name="botao_login">Login</string>
+
 </resources>
