--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,9 @@
     <string name="formulario_preco_venda">Preço de Venda</string>
     <string name="formulario_produto_ativo">Ativo</string>
     <string name="formulario_botao_salvar">Salvar</string>
-    <string name="cadastrar_produto">Cadastrar</string>
+    <string name="cadastrar">Cadastrar</string>
+    <string name="buscar">Buscar</string>
+    <string name="Venda">Venda</string>
 
 
 </resources>
