Criada tela de cadastro de clientes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,15 @@
     <string name="cadastrar">Cadastrar</string>
     <string name="buscar">Buscar</string>
     <string name="Venda">Venda</string>
+    <string name="salvar">Salvar</string>
+    <string name="voltar">Voltar</string>
+    <string name="estado">Estado</string>
+    <string name="cidade">Cidade</string>
+    <string name="numero">Numero</string>
+    <string name="bairro">Bairro</string>
+    <string name="rua">Rua</string>
+    <string name="cpf">CPF</string>
+    <string name="nome">Nome</string>
 
 
 </resources>
