--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="formulario_adicionar_produto">Adicionar</string>
     <string name="formulario_valor_produto">Valor</string>
     <string name="formulario_valor_venda">Valor Venda</string>
+    <string name="formulario_descricao">Descricao</string>
     <string name="formulario_salvar_venda">Finalizar Venda</string>
     <string name="buscar">Buscar</string>
 
@@ -56,7 +57,6 @@
     <string name="vendas_mensal">Mensal</string>
     <string name="vendas_semanal">Semanal</string>
     <string name="vendas_diario">Diário</string>
-
 
 
 </resources>
