--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="titulo_tela_menu_relatorio">Menu de Relatórios</string>
 
     <string name="titulo_tela_cadastrar_produto">Cadastrar Produto</string>
+    <string name="titulo_tela_editar_produto">Editar Produto</string>
     <string name="titulo_tela_cadastrar_cliente">Cadastrar Cliente</string>
     <string name="titulo_tela_realizar_venda">Realizar Venda</string>
     <string name="titulo_tela_cadastrar_usuario">Cadastrar Usuário</string>
@@ -33,6 +34,7 @@
     <string name="nova_venda">Nova Venda</string>
     <string name="Venda">Venda</string>
     <string name="salvar">Salvar</string>
+    <string name="alterar">Alterar</string>
     <string name="voltar">Voltar</string>
     <string name="estado">Estado</string>
     <string name="cidade">Cidade</string>
