Inclusao de data e formatacao do double em moeda

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="formulario_adicionar_produto">Adicionar</string>
     <string name="formulario_valor_produto">Valor</string>
     <string name="formulario_valor_venda">Valor Venda</string>
-    <string name="formulario_descricao">Descricao</string>
+    <string name="formulario_descricao">Descrição</string>
     <string name="formulario_salvar_venda">Finalizar Venda</string>
 
 
